@@ -250,12 +250,16 @@ pre {
 }
 
 dl.function > dt,
+dl.attribute > dt,
+dl.classmethod > dt,
+dl.method > dt,
 dl.class > dt
 {
     background-color:#F0F0F0;
     margin:0px -10px;
     padding: 0px 10px;
 }
+
 
 dt:target, span.highlight {
     background-color:#FBE54E;
